--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -1,13 +1,13 @@
 ---
 ---
 
-@import "abstracts/reset"
 
 
-// @import 'main
-// {%- if jekyll.environment == 'production' -%}
-//   .bundle
-// {%- endif -%}
-// ';
+
+@import 'main
+{%- if jekyll.environment == 'production' -%}
+  .bundle
+{%- endif -%}
+';
 
 /* append your custom style below */
