chore: try again

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -1,9 +1,12 @@
 ---
 ---
 
+@import '../node_modules/bootstrap/scss/bootstrap';
 
-
-
-@import '../_sass/dist/bootstrap.css'
+@import 'main
+{%- if jekyll.environment == 'production' -%}
+  .bundle
+{%- endif -%}
+';
 
 /* append your custom style below */
