chore: fix again

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -1,16 +1,10 @@
 ---
 ---
 
-@import 'bootstrap';
-
-
-// @import 'bootstrap';
-
-
-// @import 'main
-// {%- if jekyll.environment == 'production' -%}
-//   .bundle
-// {%- endif -%}
-// ';
+@import 'main
+{%- if jekyll.environment == 'production' -%}
+  .bundle
+{%- endif -%}
+';
 
 /* append your custom style below */
